--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "packageClient": "webpack",
         "lint": "eslint --ext .ts,.tsx ./client --color --fix",
         "makeDoc": "rimraf.cmd ./doc && typedoc --options typedoc.json",
-        "webpack": "webpack"
+        "webpack": "webpack",
+        "test": "mocha tests --server --exit"
     },
     "dependencies": {
         "@apollo/react-common": "3.1.3",
@@ -111,9 +112,11 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "2.30.0",
         "@typescript-eslint/parser": "2.30.0",
+        "assert": "2.0.0",
         "eslint": "6.8.0",
         "eslint-plugin-react": "7.19.0",
         "livereload": "0.9.1",
+        "mocha": "7.1.2",
         "nodemon": "2.0.3",
         "onchange": "6.1.0",
         "rimraf": "3.0.2",
