--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "node": ">=10.14.1",
         "npm": ">=6.5.0"
     },
+    "config": {
+        "public": "public"
+    },
     "scripts": {
         "start": "node ./bin/www",
         "watch": "concurrently \"webpack && webpack --watch\" \"npm run watchServer\" \"livereload ./public/js -w 1000 -d\"",
