--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
         "@types/react": "16.9.34",
         "@types/react-dom": "16.9.6",
         "@types/react-router-dom": "5.1.5",
-        "@types/recharts": "^1.8.10",
+        "@types/recharts": "1.8.10",
         "@types/scriptjs": "0.0.2",
         "@types/underscore": "1.9.4",
         "@types/underscore.string": "0.0.38",
         "@types/validator": "13.0.0",
         "@types/webpack-env": "1.15.1",
         "@uifabric/icons": "7.3.27",
-        "@uifabric/react-hooks": "^7.2.0",
+        "@uifabric/react-hooks": "7.2.0",
         "apollo-cache": "1.3.5",
         "apollo-cache-inmemory": "1.6.6",
         "apollo-client": "2.6.9",
@@ -50,7 +50,7 @@
         "azure-storage": "2.10.3",
         "babel-loader": "8.1.0",
         "chalk": "4.0.0",
-        "compression-webpack-plugin": "^3.1.0",
+        "compression-webpack-plugin": "3.1.0",
         "concurrently": "5.1.0",
         "connect-azuretables": "1.0.20",
         "cookie-parser": "~1.4.4",
@@ -70,7 +70,7 @@
         "graphql-tools": "5.0.0",
         "hbs": "4.1.1",
         "helmet": "3.21.2",
-        "html-webpack-plugin": "^4.3.0",
+        "html-webpack-plugin": "4.3.0",
         "http-errors": "1.7.3",
         "i18next": "19.3.4",
         "install": "0.13.0",
@@ -87,14 +87,16 @@
         "passport-azure-ad": "4.2.1",
         "react": "16.13.1",
         "react-color": "2.18.1",
+        "react-device-detect": "1.12.1",
         "react-dom": "16.13.1",
         "react-fade-in": "1.0.0",
         "react-hotkeys": "2.0.0",
         "react-i18next": "11.4.0",
         "react-markdown": "4.3.1",
         "react-router-dom": "5.1.2",
-        "recharts": "^1.8.5",
+        "recharts": "1.8.5",
         "regenerator-runtime": "0.13.5",
+        "rimraf": "3.0.2",
         "sass-loader": "8.0.2",
         "scriptjs": "2.5.9",
         "simple-oauth2": "2.4.0",
@@ -111,8 +113,7 @@
         "validator": "13.0.0",
         "webpack": "4.42.1",
         "webpack-cli": "3.3.11",
-        "with-default-props": "^0.2.1",
-        "rimraf": "3.0.2"
+        "with-default-props": "0.2.1"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "2.30.0",
@@ -121,7 +122,7 @@
         "eslint-plugin-react": "7.19.0",
         "livereload": "0.9.1",
         "nodemon": "2.0.3",
-        "typedoc": "^0.17.6",
+        "typedoc": "0.17.6",
         "typedoc-neo-theme": "1.0.8",
         "typedoc-plugin-external-module-name": "3.1.0"
     },
