--- a/public/sitemanifest.json
+++ b/public/sitemanifest.json
@@ -1,6 +1,7 @@
 {
     "name": "DID365",
     "short_name": "DID 365: The Calendar is the Timesheet",
+    "display": "standalone",
     "description": "Timetracking made easy",
     "icons": [
         {
@@ -17,6 +18,5 @@
     "start_url":"/",
     "scope":"/",
     "theme_color": "#cf5f00",
-    "background_color": "#ffffff",
-    "display": "fullscreen"
+    "background_color": "#ffffff"
 }
