--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "request": "attach",
       "name": "Node: Nodemon",
       "processId": "${command:PickProcess}",
-      "restart": true,
+      "restart": false,
       "protocol": "inspector"
     }
   ]
