--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "watch": "concurrently \"webpack\" \"npm run watchServer\" \"livereload ./public/js -w 250 -d\"",
         "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
         "packageClient": "npm run clean && webpack",
-        "clean": "rimraf ./public/js",
+        "clean": "npx rimraf ./public/js",
         "lint": "eslint --ext .ts,.tsx ./client --color --fix",
         "makeDoc": "rimraf ./doc && typedoc --options typedoc.json",
         "debug": "nodemon --inspect ./bin/www",
@@ -97,7 +97,6 @@
         "react-router-dom": "5.1.2",
         "recharts": "1.8.5",
         "regenerator-runtime": "0.13.5",
-        "rimraf": "3.0.2",
         "sass-loader": "8.0.2",
         "scriptjs": "2.5.9",
         "simple-oauth2": "2.4.0",
