--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "scripts": {
         "start": "node ./bin/www",
-        "watch": "concurrently \"webpack\" \"npm run watchServer\" \"livereload ./public/js -w 250 -d\"",
+        "watch": "concurrently \"webpack\" \"npm run watchServer\"",
         "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
         "packageClient": "webpack",
         "lint": "eslint --ext .ts,.tsx ./client --color --fix",
@@ -121,12 +121,12 @@
         "assert": "2.0.0",
         "eslint": "6.8.0",
         "eslint-plugin-react": "7.19.0",
-        "livereload": "0.9.1",
         "mocha": "7.1.2",
         "nodemon": "2.0.3",
         "typedoc": "0.17.6",
         "typedoc-neo-theme": "1.0.8",
-        "typedoc-plugin-external-module-name": "3.1.0"
+        "typedoc-plugin-external-module-name": "3.1.0",
+        "webpack-livereload-plugin": "^2.3.0"
     },
     "resolutions": {
         "@babel/preset-env": "7.8.0"
