--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "debug": "4.1.1",
         "dotenv": "8.2.0",
         "express": "4.17.1",
+        "express-bearer-token": "2.4.0",
         "express-favicon": "2.0.1",
         "express-graphql": "0.9.0",
         "express-session": "1.17.1",
@@ -73,6 +74,7 @@
         "http-errors": "1.7.3",
         "i18next": "19.3.4",
         "install": "0.13.0",
+        "jsonwebtoken": "8.5.1",
         "lodash": "4.17.15",
         "loglevel": "1.6.7",
         "loglevel-plugin-prefix": "0.8.4",
@@ -112,8 +114,8 @@
         "validator": "13.0.0",
         "webpack": "4.42.1",
         "webpack-cli": "3.3.11",
-        "with-default-props": "0.2.1",
-        "webpack-livereload-plugin": "2.3.0"
+        "webpack-livereload-plugin": "2.3.0",
+        "with-default-props": "0.2.1"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "2.30.0",
