--- a/package.json
+++ b/package.json
@@ -45,16 +45,19 @@
     "apollo-client": "2.6.9",
     "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
+    "apollo-server-express": "2.17.0",
     "apollo-utilities": "1.3.4",
     "array-sort": "1.0.0",
     "azure-storage": "2.10.3",
     "babel-loader": "8.1.0",
+    "body-parser": "1.19.0",
     "chalk": "4.0.0",
     "compression-webpack-plugin": "3.1.0",
     "concurrently": "5.1.0",
     "connect-azuretables": "1.0.20",
     "cookie-parser": "~1.4.4",
     "core-js": "3.6.5",
+    "cors": "2.8.5",
     "css-loader": "3.5.3",
     "css-modules-typescript-loader": "4.0.0",
     "debug": "4.1.1",
