--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "singleQuote": true,
   "semi": false,
   "arrowParens": "avoid",
-  "printWidth": 120
+  "printWidth": 120,
+  "trailingComma": "es5",
+  "bracketSpacing": true
 }
