--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,8 @@ OAUTH_APP_ID=##Insert GUID##
 OAUTH_APP_PASSWORD=##Insert Password##
 AZURE_STORAGE_CONNECTION_STRING=##Insert CS##
 SESSION_SIGNING_KEY=##Insert Key##
-OAUTH_REDIRECT_URI=http://localhost:8080/auth/callback
-OAUTH_SCOPES=profile offline_access user.read calendars.read
+OAUTH_REDIRECT_URI=http://localhost:9001/auth/callback
+OAUTH_SCOPES=profile offline_access user.read user.readbasic.all calendars.read mailboxsettings.readwrite
 OAUTH_AUTHORITY=https://login.microsoftonline.com/common
 OAUTH_ID_METADATA=/v2.0/.well-known/openid-configuration
 OAUTH_AUTHORIZE_ENDPOINT=/oauth2/v2.0/authorize
