--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "uuid": "7.0.2",
     "validator": "13.0.0",
     "webpack": "4.42.1",
+    "webpack-build-notifier": "2.1.0",
     "webpack-cli": "3.3.11",
     "webpack-livereload-plugin": "2.3.0",
     "with-default-props": "0.2.1"
