--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.19.0",
+    "husky": "^4.3.0",
     "mocha": "7.1.2",
     "nodemon": "2.0.3",
     "open": "7.2.1",
