--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,26 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "allowSyntheticDefaultImports": true,
-      "forceConsistentCasingInFileNames": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "jsx": "react",
-      "declaration": false,
-      "sourceMap": false,
-      "experimentalDecorators": true,
-      "downlevelIteration": true,
-      "noImplicitAny": false,
-      "skipLibCheck": true,
-      "inlineSources": false,
-      "strictNullChecks": false,
-      "noUnusedLocals": false,
-      "resolveJsonModule": true,
-      "typeRoots": [
-        "./node_modules/@types"
-      ],
-      "types": [
-        "webpack-env"
-      ],
-      "lib": [
-        "es2015",
-        "dom",
-        "es2015.collection"
-      ],
-      "baseUrl": "client"
-    },
-    "include": [
-      "client/**/*.ts",     
-      "client/**/*.tsx",  
-      "client/i18n/*.json"
-    ],
-    "exclude": [
-      "node_modules",
-      "lib"
-    ],
-  }
+  "compilerOptions": {
+    "target": "es5",
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "jsx": "react",
+    "declaration": false,
+    "sourceMap": false,
+    "experimentalDecorators": true,
+    "downlevelIteration": true,
+    "noImplicitAny": false,
+    "skipLibCheck": true,
+    "inlineSources": false,
+    "strictNullChecks": false,
+    "noUnusedLocals": false,
+    "resolveJsonModule": true,
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["webpack-env"],
+    "lib": ["es2015", "dom", "es2015.collection"],
+    "baseUrl": "client"
+  },
+  "include": ["client/**/*.ts", "client/**/*.tsx", "client/i18n/*.json"],
+  "exclude": ["node_modules", "lib"]
+}
