--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "apollo-link-http": "1.5.17",
     "apollo-server-express": "2.17.0",
     "apollo-utilities": "1.3.4",
+    "applicationinsights": "1.8.7",
     "array-sort": "1.0.0",
     "azure-storage": "2.10.3",
     "babel-loader": "8.1.0",
