--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prettier:server": "prettier --config .prettierrc './**/*.js' --write",
     "makeDoc": "rimraf ./doc && typedoc --options typedoc.json && graphdoc",
     "debug": "nodemon --inspect ./bin/www",
-    "tests": "mocha tests --exit"
+    "tests": "mocha tests --exit",
+    "clean": "rimraf /public/js"
   },
   "dependencies": {
     "@apollo/react-common": "3.1.3",
@@ -139,6 +140,7 @@
     "nodemon": "2.0.3",
     "open": "7.2.1",
     "prettier": "^2.1.1",
+    "rimraf": "3.0.2",
     "typedoc": "0.17.6",
     "typedoc-neo-theme": "1.0.8",
     "typedoc-plugin-external-module-name": "3.1.0",
