--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "watch": "concurrently \"webpack\" \"npm run watch:server\" \"node tasks/open.js\" \"node tasks/localtunnel.js\"",
+    "postinstall": "link-module-alias",
     "start": "node ./bin/www",
     "watch:server": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
     "package:client": "webpack",
@@ -137,6 +138,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.19.0",
     "husky": "^4.3.0",
+    "link-module-alias": "^1.2.0",
     "localtunnel": "2.0.0",
     "mocha": "7.1.2",
     "nodemon": "2.0.3",
@@ -151,5 +153,11 @@
   },
   "resolutions": {
     "@babel/preset-env": "7.8.0"
+  },
+  "_moduleAliases": {
+    "!utils": "utils",
+    "!api": "api",
+    "!services": "services",
+    "!env": "utils/env.js"
   }
 }
