--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,6 @@
 # Code owners - aka default reviewers for PRs
 # https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
 
-* @Puzzlepart/did
+* @okms
+* @damsleth
+* @olemp
