--- a/sample.env
+++ b/sample.env
@@ -18,3 +18,6 @@ WEBPACK_NOTIFICATIONS_SHOWDURATION=true
 WEBPACK_NOTIFICATIONS_SOUND=growl
 TESTS_AZURE_STORAGE_CONNECTION_STRING=##Insert CS##
 LOCALTUNNEL_SUBDOMAIN=
+SESSION_NAME=did.localhost
+SESSION_SECURE=0
+SESSION_TIMEOUT=10080
