--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "watch": "concurrently \"webpack\" \"npm run watch:server\" \"node tasks/open.js\" \"node tasks/localtunnel.js\"",
-    "prestart": "npm run build:server",
+    "prestart": "npm run build:server && copyfiles -u 1 \"server/public/**/*\" server-dist",
     "start": "node ./server-dist/index.js",
     "watch:server": "nodemon",
     "package:client": "webpack",
@@ -26,20 +26,20 @@
     "@microsoft/microsoft-graph-client": "2.0.0",
     "@pnp/common": "2.0.4",
     "@types/debug": "^4.1.5",
+    "@types/express": "4.17.8",
+    "@types/get-value": "3.0.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "8.0.3",
     "@types/morgan": "^1.9.2",
     "@types/passport": "^1.0.4",
-    "@types/string-similarity": "^3.0.0",
-    "@types/string-strip-html": "^5.0.0",
-    "@types/express": "4.17.8",
-    "@types/get-value": "3.0.1",
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
     "@types/react-fade-in": "0.1.0",
     "@types/react-router-dom": "5.1.6",
     "@types/recharts": "1.8.10",
     "@types/scriptjs": "0.0.2",
+    "@types/string-similarity": "^3.0.0",
+    "@types/string-strip-html": "^5.0.0",
     "@types/underscore": "1.10.24",
     "@types/underscore.string": "0.0.38",
     "@types/validator": "13.0.0",
@@ -57,6 +57,7 @@
     "compression-webpack-plugin": "6.0.5",
     "concurrently": "5.3.0",
     "connect-azuretables": "1.0.20",
+    "copyfiles": "2.4.0",
     "core-js": "3.6.5",
     "css-loader": "3.5.3",
     "css-modules-typescript-loader": "4.0.1",
