--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "watch": "concurrently \"webpack\" \"npm run watch:server\" \"node tasks/open.js\" \"node tasks/localtunnel.js\"",
-    "prestart": "npm run build:server && copyfiles -u 1 \"server/public/**/*\" server-dist",
+    "prestart": "rimraf /server-dist && npm run build:server && copyfiles -u 1 \"server/public/**/*\" server-dist",
     "start": "node ./server-dist/index.js",
     "watch:server": "nodemon",
     "package:client": "webpack",
@@ -119,7 +119,8 @@
     "validator": "13.0.0",
     "webpack": "4.44.1",
     "webpack-cli": "4.1.0",
-    "with-default-props": "0.2.1"
+    "with-default-props": "0.2.1",
+    "rimraf": "3.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "4.6.1",
@@ -133,7 +134,6 @@
     "mocha": "7.1.2",
     "open": "7.2.1",
     "prettier": "^2.1.1",
-    "rimraf": "3.0.2",
     "ts-node-dev": "1.0.0",
     "webpack-build-notifier": "2.1.0",
     "webpack-livereload-plugin": "2.3.0"
