--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -27,3 +27,24 @@ jobs:
           npm run package:client
         env:
           NODE_ENV: production
+  build2:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [10.x]
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          ref: ${{ github.head_ref }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install npm packages
+        run: |
+          npm install --no-progress --loglevel silent --no-shrinkwrap --no-fund
+      - name: Build server
+        run: |
+          npm run build:server
+        env:
+        NODE_ENV: production
