--- a/.github/workflows/on_pull_request_test_build.yml
+++ b/.github/workflows/on_pull_request_test_build.yml
@@ -5,6 +5,15 @@ on:
     branches:
       - master
       - dev
+    paths:
+      - 'server/**/.ts'
+      - 'client/**/.tsx'
+      - 'client/**/.ts'
+      - 'client/**/.json'
+      - 'resources/**/.json'
+      - webpack.config.js
+      - package.json
+      - tsconfig.json
 jobs:
   build:
     runs-on: ubuntu-latest
