--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "rimraf": "3.0.2"
   },
   "devDependencies": {
+    "@types/passport-azure-ad": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "assert": "2.0.0",
