--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,9 @@
   "tabWidth": 2,
   "singleQuote": true,
   "semi": false,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "printWidth": 120,
-  "trailingComma": "es5",
-  "bracketSpacing": true
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": true
 }
